<resources>
    <string name="app_name">Money Management</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_dob">mm/dd/yyyy</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Not a member ? Sign up now !</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="ime_next">Next</string>

    <!--Stirngs related to G+ Login Button-->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_pass">Forgot Password</string>
    <string name="pick_date">mm/DD/YYYY</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password ?</string>
    <!--Stirngs related to G+ Login Button-->

    <!--Dialogs-->
    <string name="user_does_not_exist">User does not exist</string>
    <string name="invalid_pass">Invalid Password.Please try again.</string>
    <string name="some_error">Something went wrong, please try again later.</string>
    <string name="email_already_exist">Email already exist.Please use a different one or Login.</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="check_mail">A Reset password has been sent to your mail.</string>
    <string name="title_activity_transcations_view">Balance</string>
    <string name="title_add_transcations_view">Add Transaction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_adjust_balance">adjust balance</string>
    <string name="done_tick">Done</string>
    <!--Dialogs-->

    <!-- Tab resources-->
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Tab Resources-->


    <!-- Imagesets for category selection-->
    <string name="salary_icon">Hello blank fragment</string>
</resources>
